src/tests/invalidframingconfig/data/frameancestorsnonenoxfodeny.tmpl
<!DOCTYPE html>
<title>Invalid framing configuration</title>
CSP frame-ancestors 'none' is set but X-Frame-Options DENY is not.